--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django-FastAPI Boilerplate</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="icon" href="./img/logo.png">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="icon" href="/img/logo.png">
 </head>
 
 <body>
